--- a/citas.html
+++ b/citas.html
@@ -121,7 +121,7 @@
                         </li>
                         <li id="fila_206">
                             <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0005">
-                                <h6>Cambio de base de cotización- </h6>
+                                <h6>Cambio de base de cotización </h6>
                                 <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Cambio de base de cotización-convenios especiales</p>
                             </a>
                             <A name="fila_205" HREF="#" id="agregar-favoritos_206"></A>
@@ -149,7 +149,7 @@
                         </li>
                         <li id="fila_210">
                             <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0003">
-                                <h6>Confirmación de asignación de CCCs o NAFs a un autorizado RED</h6>
+                                <h6>Asignación de CCCs o NAFs a un autorizado RED</h6>
                                 <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Confirmación de asignación de CCCs o NAFs a un autorizado RED
                                 </p>
                             </a>
@@ -158,7 +158,7 @@
 
                         <li id="fila_211">
                             <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0002">
-                                <h6>Consulta de autorizados RED que gestionan un NAF</h6>
+                                <h6>Consulta de autorizados RED NAF</h6>
                                 <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de autorizados RED que gestionan un NAF
                                 </p>
                             </a>
@@ -167,7 +167,7 @@
 
                         <li id="fila_212">
                             <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RETC0001">
-                                <h6>Consulta de autorizados RED que gestionan una empresa</h6>
+                                <h6>Consulta de autorizados RED Empresa</h6>
                                 <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de autorizados RED que gestionan una empresa
                                 </p>
                             </a>
@@ -175,7 +175,7 @@
                         </li>
                         <li id="fila_213">
                             <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV21YD00&PAUC.FORCE_IDP=IPDC">
-                                <h6>Consulta de cálculos de cuotas para trabajador</h6>
+                                <h6>Consulta de cálculos de cuotas</h6>
                                 <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de cálculos de cuotas para trabajador
                                 </p>
                             </a>
@@ -184,14 +184,95 @@
 
 
                         <li id="fila_214">
-                            <a target="_parent" href="https://sp.seg-social.es/AutenticacionSMSWeb/Identificacion?URI=https%3A%2F%2Fsp.seg-social.es%2FIPDC%2FPostLogin%3FidSesion%3DSPACcd6e317b-6bf2-4056-912e-69d69ac35a83">
-                                <h6>Consulta del número de Seguridad Social NUSS</h6>
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0007&PAUC.FORCE_IDP=IPDC">
+                                <h6>Consulta del número de SS</h6>
                                 <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta del número de Seguridad Social NUSS
                                 </p>
                             </a>
                             <A name="fila_214" HREF="#" id="agregar-favoritos_214"></A>
                         </li>
 
+                        <li id="fila_215">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV24E002">
+                                <h6>Consulta recibos de Autónomos</h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Consulta de recibos emitidos Régimen de Autónomos
+                                </p>
+                            </a>
+                            <A name="fila_215" HREF="#" id="agregar-favoritos_215"></A>
+                        </li>
+                        <li id="fila_216">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=RADNJD40">
+                                <h6>Solicitud De Domiciliación En Cuenta</h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Solicitud De Domiciliación En Cuenta
+                                </p>
+                            </a>
+                            <A name="fila_216" HREF="#" id="agregar-favoritos_216"></A>
+                        </li>
+                        <li id="fila_217">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0004">
+                                <h6>Duplicado de documentos de inscripción y asignación de CCC para empresario</h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Duplicado de documentos de inscripción y asignación de CCC para empresario
+                                </p>
+                            </a>
+                            <A name="fila_217" HREF="#" id="agregar-favoritos_217"></A>
+                        </li>
+                        <li id="fila_218">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL003">
+                                <h6>Eliminación de altas/bajas previas de trabajadores en el Sistema Especial para Empleados de Hogar
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Eliminación de altas/bajas previas de trabajadores en el Sistema Especial para Empleados de Hogar
+
+                                </p>
+                            </a>
+                            <A name="fila_218" HREF="#" id="agregar-favoritos_218"></A>
+                        </li>
+                        <li id="fila_219">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0003">
+                                <h6>Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">
+                                    Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
+                                </p>
+                            </a>
+                            <A name="fila_219" HREF="#" id="agregar-favoritos_219"></A>
+                        </li>
+                        <li id="fila_220">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0003">
+                                <h6>Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
+
+                                </p>
+                            </a>
+                            <A name="fila_220" HREF="#" id="agregar-favoritos_220"></A>
+                        </li>
+                        <li id="fila_221">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0009&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe de alta laboral a fecha concreta
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de alta laboral a fecha concreta
+                                </p>
+                            </a>
+                            <A name="fila_221" HREF="#" id="agregar-favoritos_221"></A>
+                        </li>
+                        <li id="fila_222">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AESRBC01&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe De Bases De Cotización
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe De Bases De Cotización
+                                </p>
+                            </a>
+                            <A name="fila_222" HREF="#" id="agregar-favoritos_222"></A>
+                        </li>
+                        <li id="fila_223">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AESRCUS3&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe De Bases Y Cuotas Ingresadas
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe De Bases Y Cuotas Ingresadas
+                                </p>
+                            </a>
+                            <A name="fila_223" HREF="#" id="agregar-favoritos_223"></A>
+                        </li>
 
                     </ul>
 
@@ -201,14 +282,7 @@
 
 
 
-14. Consulta del número de Seguridad Social NUSS
-15. Consulta de recibos emitidos para el Régimen Especial de Trabajadores Autónomos (RETA)
-16. Domiciliación en cuenta
-17. Duplicado de documentos de inscripción y asignación de CCC para empresario
-18. Eliminación de altas/ bajas previas de trabajadores en el Sistema Especial para Empleados de Hogar
-19. Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
-20. Informe Acreditación actividad agraria cuenta propia
-21. Informe de alta laboral a fecha concreta
+
 22. Informe de bases de cotización
 23. Informe de bases y cuotas ingresadas
 24. Informe de datos de cotización RETA
