--- a/citas.html
+++ b/citas.html
@@ -273,6 +273,59 @@
                             </a>
                             <A name="fila_223" HREF="#" id="agregar-favoritos_223"></A>
                         </li>
+                        <li id="fila_224">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL00C&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe de datos de cotización RETA
+
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de datos de cotización RETA
+                                </p>
+                            </a>
+                            <A name="fila_224" HREF="#" id="agregar-favoritos_224"></A>
+                        </li>
+                        <li id="fila_225">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL00D">
+                                <h6>Informe de datos de cotización RETM
+
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de datos de cotización RETM
+
+                                </p>
+                            </a>
+                            <A name="fila_225" HREF="#" id="agregar-favoritos_225"></A>
+                        </li>
+                        <li id="fila_226">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0008&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe de datos identificativos y de domicilio
+
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de datos identificativos y de domicilio
+
+                                </p>
+                            </a>
+                            <A name="fila_226" HREF="#" id="agregar-favoritos_226"></A>
+                        </li>
+                        <li id="fila_227">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0008&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe de estar al corriente en las obligaciones de la Seguridad Social
+
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de estar al corriente en las obligaciones de la Seguridad Social
+
+                                </p>
+                            </a>
+                            <A name="fila_227" HREF="#" id="agregar-favoritos_227"></A>
+                        </li>
+                        <li id="fila_228">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0004&INFORME=INAF0001&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe de estar al corriente en las obligaciones de la Seguridad Social
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de estar al corriente en las obligaciones de la Seguridad Social
+
+                                </p>
+                            </a>
+                            <A name="fila_228" HREF="#" id="agregar-favoritos_228"></A>
+                        </li>
 
                     </ul>
 
@@ -283,10 +336,8 @@
 
 
 
-22. Informe de bases de cotización
-23. Informe de bases y cuotas ingresadas
-24. Informe de datos de cotización RETA
-25. Informe de datos de cotización RETM
+
+
 26. Informe de datos identificativos y de domicilio
 27. Informe de estar al corriente en las obligaciones de la Seguridad Social
 28. Informe de situación actual del trabajador
