--- a/citas.html
+++ b/citas.html
@@ -237,11 +237,10 @@
                             <A name="fila_219" HREF="#" id="agregar-favoritos_219"></A>
                         </li>
                         <li id="fila_220">
-                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0003">
-                                <h6>Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0010&PAUC.FORCE_IDP=IPDC">
+                                <h6>Informe de acreditación actividad agraria cuenta propia
                                 </h6>
-                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Inclusión/exclusión/reincorporación en Sistema Especial Agrario. Inactividad
-
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">A través de este servicio podrá obtener, imprimir y/o consultar on-line un informe con el fin de acreditar la actividad agraria como trabajador por cuenta propia a una fecha determinada o un período concreto.
                                 </p>
                             </a>
                             <A name="fila_220" HREF="#" id="agregar-favoritos_220"></A>
@@ -318,9 +317,11 @@
                         </li>
                         <li id="fila_228">
                             <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0004&INFORME=INAF0001&PAUC.FORCE_IDP=IPDC">
-                                <h6>Informe de estar al corriente en las obligaciones de la Seguridad Social
+
+
+                                <h6>Informe de situación actual del trabajador
                                 </h6>
-                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de estar al corriente en las obligaciones de la Seguridad Social
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de situación actual del trabajador
 
                                 </p>
                             </a>
@@ -740,7 +741,7 @@ contingencias RETA.
                 $("#agregar-favoritos_" + favoritos[j].id).attr("class", "ui-btn ui-btn-icon-notext ui-icon-star ui-btn-a ");
             }
 
-            $("li[id^='contenedor_' ] ").each(function() {
+            $("div[id^='contenedor_' ] ").each(function() {
                 var numerofavoritos = 0;
 
 
