--- a/citas.html
+++ b/citas.html
@@ -328,8 +328,142 @@
                             <A name="fila_228" HREF="#" id="agregar-favoritos_228"></A>
                         </li>
 
-                    </ul>
 
+                        <li id="fila_229">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0012">
+
+
+                                <h6>Informe de situación de empresario individual
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de situación de empresario individual
+
+                                </p>
+                            </a>
+                            <A name="fila_229" HREF="#" id="agregar-favoritos_229"></A>
+                        </li>
+                        <li id="fila_230">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0004&INFORME=INAF0002">
+
+
+                                <h6>Informe de vida laboral
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de vida laboral
+
+                                </p>
+                            </a>
+                            <A name="fila_230" HREF="#" id="agregar-favoritos_230"></A>
+                        </li>
+                        <li id="fila_231">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0011">
+
+
+                                <h6>Informe de vida laboral acotado
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe de vida laboral acotado
+
+                                </p>
+                            </a>
+                            <A name="fila_231" HREF="#" id="agregar-favoritos_231"></A>
+                        </li>
+                        <li id="fila_232">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0006&PAUC.FORCE_IDP=IPDC">
+
+
+                                <h6>Informe negativo de afiliación
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe negativo de afiliación
+
+                                </p>
+                            </a>
+                            <A name="fila_232" HREF="#" id="agregar-favoritos_232"></A>
+                        </li>
+                        <li id="fila_233">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=INAF0005&PAUC.FORCE_IDP=IPDC">
+
+
+                                <h6>Informe negativo de inscripción de empresario
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">Informe negativo de inscripción de empresario
+
+                                </p>
+                            </a>
+                            <A name="fila_233" HREF="#" id="agregar-favoritos_233"></A>
+                        </li>
+                        <li id="fila_234">
+                            <a target="_parent" href="https://w7.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=PEAF0010">
+
+
+                                <h6> Inscripción y asignación de CCC para empresario individual
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Inscripción y asignación de CCC para empresario individual
+
+                                </p>
+                            </a>
+                            <A name="fila_234" HREF="#" id="agregar-favoritos_234"></A>
+                        </li>
+                        <li id="fila_235">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=SEDA0001&PAUC.FORCE_IDP=IPDC">
+
+
+                                <h6> Justificante de jornadas reales trabajadas
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Justificante de jornadas reales trabajadas
+
+                                </p>
+                            </a>
+                            <A name="fila_235" HREF="#" id="agregar-favoritos_235"></A>
+                        </li>
+                        <li id="fila_236">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL005&PAUC.FORCE_IDP=IPDC">
+
+
+                                <h6>Modificación de Actividad RETA
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">
+                                    Modificación de Actividad RETA
+                                </p>
+                            </a>
+                            <A name="fila_236" HREF="#" id="agregar-favoritos_236"></A>
+                        </li>
+                        <li id="fila_237">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=AFHGL007&PAUC.FORCE_IDP=IPDC">
+
+
+                                <h6>Modificación de la Condición RETA
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">
+                                    Modificación de la Condición RETA
+                                </p>
+                            </a>
+                            <A name="fila_237" HREF="#" id="agregar-favoritos_237"></A>
+                        </li>
+                        <li id="fila_238">
+                            <a target="_parent" href="">
+                                Rectificación de informe de bases de cotización
+
+                                <h6>
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">
+                                    Rectificación de informe de bases de cotización
+                                </p>
+                            </a>
+                            <A name="fila_238" HREF="#" id="agregar-favoritos_238"></A>
+                        </li>
+                        <li id="fila_239">
+                            <a target="_parent" href="https://sp.seg-social.es/ProsaInternet/OnlineAccess?ARQ.SPM.ACTION=LOGIN&ARQ.SPM.APPTYPE=SERVICE&ARQ.IDAPP=XV23W001&PAUC.FORCE_IDP=IPDC">
+                                Rectificación de informe de vida laboral
+
+                                <h6>
+                                </h6>
+                                <p style="text-align: left; font-size: x-small; color: rgb(25, 128, 188);">
+                                    Rectificación de informe de vida laboral
+                                </p>
+                            </a>
+                            <A name="fila_239" HREF="#" id="agregar-favoritos_239"></A>
+                        </li>
+
+
+                    </ul>
                 </div>
 
                 <!--
@@ -337,22 +471,6 @@
 
 
 
-
-
-26. Informe de datos identificativos y de domicilio
-27. Informe de estar al corriente en las obligaciones de la Seguridad Social
-28. Informe de situación actual del trabajador
-29. Informe de situación de empresario individual
-30. Informe de vida laboral
-31. Informe de vida laboral acotado
-32. Informe integrado de prestaciones
-Listado de servicios con acceso vía SMS 2 de 2 18 de junio de 2020
-33. Informe negativo de afiliación
-34. Informe negativo de inscripción de empresario
-35. Justificante de jornadas reales trabajadas
-36. Modificación de Actividad RETA
-37. Modificación de la Condición RETA
-38. Rectificación de informe de bases de cotización
 39. Rectificación de informe de vida laboral
 40. Rescisión de CCCs y NAFs asignados a un autorizado RED
 41. Resolución (duplicado) de alta/baja en el Régimen Especial de trabajadores por cuenta propia o
