--- a/citas.html
+++ b/citas.html
@@ -534,6 +534,13 @@ contingencias RETA.
                     <A name="fila_8" HREF="#" id="agregar-favoritos_8"></A>
                 </li>
 
+                <li id="fila_9">
+                    <a target="_parent" href="https://epostal.correos.es/OV2PREENVWEB/jsp/mioficinavirtual/procelect/homeProcElect.faces?_rap=mov_procesosElectoralesHandler.mostrarVista&cod_proceso=41#!"><img width="60px" src="css/images/logo_correos.png">
+                        <h6>Solicitud de Voto por correo (Necesario Certificado digital o DNIe)</h6>
+                        <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar el voto por correo, realiza la solicitud le mandan el voto y posteriormente lo entrega a correos o al cartero. </p>
+                    </a>
+                    <A name="fila_9" HREF="#" id="agregar-favoritos_9"></A>
+                </li>
 
 
 
