--- a/citas.html
+++ b/citas.html
@@ -535,7 +535,7 @@ contingencias RETA.
                 </li>
 
                 <li id="fila_9">
-                    <a target="_parent" href="https://epostal.correos.es/OV2PREENVWEB/jsp/mioficinavirtual/procelect/homeProcElect.faces?_rap=mov_procesosElectoralesHandler.mostrarVista&cod_proceso=41#!"><img width="60px" src="css/images/logo_correos.png">
+                    <a target="_parent" href="https://www.correos.es/es/es/particulares/para-el-ciudadano/voto-por-correo">
                         <h6>Solicitud de Voto por correo (Necesario Certificado digital o DNIe)</h6>
                         <p style=" text-align: left; font-size: x-small; color: rgb(25, 128, 188);"> Para solicitar el voto por correo, realiza la solicitud le mandan el voto y posteriormente lo entrega a correos o al cartero. </p>
                     </a>
